admission/ValidatingAdmissionPolicy/policies/pod-template-labels/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: violating-pod-template-labels
  annotations:
    kubeapt.io/uuid: "7dc91776-2f31-44d1-bb85-f9a18ed08618"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
